--- a/notebooks/2.0-rn-get_SAP_CVEs.ipynb
+++ b/notebooks/2.0-rn-get_SAP_CVEs.ipynb
@@ -24,17 +24,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sep 23, 2024 3:09:01 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Sep 26, 2024 12:42:06 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Sep 23, 2024 3:09:01 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Sep 26, 2024 12:42:06 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Sep 23, 2024 3:09:02 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Sep 26, 2024 12:42:07 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Sep 23, 2024 3:09:02 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Sep 26, 2024 12:42:07 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Sep 23, 2024 3:09:02 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Sep 26, 2024 12:42:07 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Sep 23, 2024 3:09:02 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Sep 26, 2024 12:42:07 AM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n"
      ]
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6994a3e6-e57c-4801-84db-d8e50938009a",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "dd67e9d0-4207-4200-a932-56a464d0fd31",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9cf992b5-ec19-429d-a763-629227abbaf4",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "0ee96f7c-64ef-461f-9189-1cb9fcb9e36b",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "d353eb05-3c15-4b34-a9ff-c03870745844",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "ce8d1d81-4e0e-42c2-807f-179dff563d88",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "d0114ae5-17c4-4055-ad41-fae482328b23",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "dc9537c3-ecf3-43de-a34c-c8e88e42fe28",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "8148fa20-4dbf-4b1b-ba72-e032b972674e",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "016a79b9-c77c-43b9-ba57-36af5e204565",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "d1fd930e-509c-4132-9280-5fc30e3902e0",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "e50353fe-a629-4d45-a300-4fa0d4001010",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "c9aadaf3-dec1-4c4d-bef8-c056c4bedb9f",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "baf5411a-8a6e-4c86-b982-b8e8ff9f0fe9",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "61cdcaf1-5ba1-41cc-bce6-490678c26ae9",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "id": "7169146c-6b85-46d0-ab1c-cd0d54c9d6bb",
    "metadata": {},
    "outputs": [],
@@ -495,102 +495,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "id": "959dbcca-2cbb-4f2b-8ed6-756c435de926",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 641 entries, 0 to 123\n",
-      "Data columns (total 26 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   cve_id         641 non-null    object \n",
-      " 1   datePublished  641 non-null    object \n",
-      " 2   dateUpdated    641 non-null    object \n",
-      " 3   descriptions   641 non-null    object \n",
-      " 4   product_l      641 non-null    object \n",
-      " 5   epss_l         641 non-null    object \n",
-      " 6   percentile     641 non-null    object \n",
-      " 7   priority_l     641 non-null    object \n",
-      " 8   cweId          638 non-null    object \n",
-      " 9   note_id        641 non-null    object \n",
-      " 10  Note#          641 non-null    int64  \n",
-      " 11  Title          641 non-null    object \n",
-      " 12  Priority       641 non-null    object \n",
-      " 13  CVSS           641 non-null    object \n",
-      " 14  priority       641 non-null    object \n",
-      " 15  epss           641 non-null    float64\n",
-      " 16  cvss           641 non-null    float64\n",
-      " 17  cvss_version   641 non-null    object \n",
-      " 18  cvss_severity  641 non-null    object \n",
-      " 19  kev            27 non-null     object \n",
-      " 20  kev_source     641 non-null    object \n",
-      " 21  cpe            641 non-null    object \n",
-      " 22  vendor         583 non-null    object \n",
-      " 23  product        583 non-null    object \n",
-      " 24  vector         641 non-null    object \n",
-      " 25  sap_note_year  641 non-null    object \n",
-      "dtypes: float64(2), int64(1), object(23)\n",
-      "memory usage: 135.2+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sap_cve_df.info()"
+    "#sap_cve_df['epss'] = sap_cve_df['epss'].map(lambda x: x * 100).astype('float').round(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
+   "id": "a18bb720-5978-4c63-9744-21a416ee2312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sap_cve_df['cveInfo'] = sap_cve_df['cve_id'].apply(lambda x: x.replace(f'{x}', f'https://www.cvedetails.com/cve/{x}/'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "958503ea-f6bd-4e03-8dbc-28572471e117",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sap_cve_df.drop_duplicates(subset=['Note#'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "id": "3b47c719-ebd6-4d47-85f8-c12f60cde8c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sap_cve_df.loc[(sap_cve_df['Priority'] == 'Hot') | (sap_cve_df['Priority'] == 'HotNews') , 'Priority'] = 'Hot News'"
+    "sap_cve_df.loc[(sap_cve_df['Priority'] == 'Hot') | (sap_cve_df['Priority'] == 'HotNews') | (sap_cve_df['Priority'] == 'Very High'), 'Priority'] = 'Hot News'\n",
+    "#sap_cve_df.loc[(sap_cve_df['Priority'] == 'Hot') | (sap_cve_df['Priority'] == 'HotNews'), 'Priority'] = 'Hot News'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
+   "id": "cae61325-4c92-4a36-9ef0-2a8a5d277f39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cweId'] == 'Cross-Site Scripting') | (sap_cve_df['cweId'] == 'Cross Site Scripting') | (sap_cve_df['cweId'] == \"Cross-Site Scripting (XSS)\"), 'cweId'] = \"CWE-79\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "c2c777e4-7e94-4a4d-94c7-f461c256e467",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['High', 'Medium', 'Low', 'Hot News', 'Very High'], dtype=object)"
+       "array(['Denial of Service', 'Missing Authorization Check',\n",
+       "       'Information Disclosure', 'Header Manipulation', 'CWE-79',\n",
+       "       'Missing Encryption', 'Improper Input Validation',\n",
+       "       'XML External Entity Reference (XXE)', 'Remote Code Execution',\n",
+       "       'SQL Injection', 'Missing Authorization',\n",
+       "       'Weak Password Requirements', 'Clickjacking', 'Tabnabbing',\n",
+       "       'Other', 'Improper Authentication', 'Directory Traversal',\n",
+       "       'Missing Authentication Check', 'Code Execution',\n",
+       "       'Authentication Bypass', 'Missing Authorization check',\n",
+       "       'Insecure Deserialization', 'Server-Side Request Forgery',\n",
+       "       'Reverse Tabnabbing', 'Code Injection', 'Information disclosure',\n",
+       "       'Unquoted Search Path or Element (CWE - 428)', 'CWE-284',\n",
+       "       'CWE-611', 'CWE-290', 'Missing XML Validation',\n",
+       "       'URL Redirection to Untrusted Site',\n",
+       "       'Missing XML Validation (CWE - 112)', 'CWE-125', 'CWE-476',\n",
+       "       'CWE-787',\n",
+       "       \"Improper Neutralization of Special Elements in Output Used by a Downstream Component ('Injection')\",\n",
+       "       'Missing Authority Check', 'CWE-95', 'CWE-444', 'CWE-778',\n",
+       "       'CWE-434', 'Server-Side Request Forgery (SSRF)', 'CWE-89',\n",
+       "       'CWE-918', 'Task Hijacking', 'CWE-288', 'CWE-297', 'CWE-862',\n",
+       "       'CWE-601', 'CWE-1022', 'Improper Input Sanitization',\n",
+       "       'Unrestricted File Upload', 'OS Command Injection',\n",
+       "       'Null Pointer Dereference', 'Directory/Path Traversal', 'CWE-22',\n",
+       "       'n/a', 'Improper Authorization', 'CWE-1236', 'CWE-668',\n",
+       "       'Hard Coded Credentials', 'CWE-522', 'CWE-863', 'CWE-400',\n",
+       "       'Code injection', 'Path Traversal', 'CWE-835',\n",
+       "       'Improper input validation', 'CWE-200', 'URL Redirection',\n",
+       "       'CWE-352', 'CWE-502', 'CWE-20', 'CWE-269', 'CWE-94', 'CWE-121',\n",
+       "       'CWE-119', 'CWE-338', 'CWE-326', 'CWE-428', 'CWE-312', 'CWE-311',\n",
+       "       'CWE-287', 'CWE-755', 'CWE-319', 'CWE-306', 'CWE-74', 'CWE-345',\n",
+       "       'CWE-213', 'CWE-416', 'CWE-367', 'CWE-112', 'CWE-674', 'CWE-917',\n",
+       "       'CWE:862', 'CWE-129', 'CW-653', 'CWE-427', 'CWE-77',\n",
+       "       'Denial of Service (DoS)', 'CWE-497', 'CWE-307', 'CWE-117',\n",
+       "       'CWE-209', 'CWE-1386', 'CWE-770', 'CWE-639', 'CWE-78', 'CWE-1390',\n",
+       "       'CWE-285', 'CWE-732', 'CWE-644', 'CWE-120', 'CWE-23', 'CWE-923',\n",
+       "       'Velocity Sandbox Bypass', 'CWE-80', 'CWE-267', 'CWE-294',\n",
+       "       'CWE-295', 'CWE-640', 'CWE-35', None, 'CWE-693', 'CWE-91',\n",
+       "       'use-after-free', 'CWE-256', 'CWE-426', 'CWE-359'], dtype=object)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sap_cve_df['Priority'].unique()"
+    "sap_cve_df['cweId'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "id": "8b3b85ee-33d2-4a8b-a40c-423e860f04cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sap_cve_df.to_csv('sap_cve_last_01.csv', index=False)"
+    "sap_cve_df.to_csv('sap_cve_last_02.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2bb7b8a9-e879-459d-9622-dfbd423d577d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>epss</th>\n",
+       "      <th>Note#</th>\n",
+       "      <th>cweId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00124</td>\n",
+       "      <td>3000306</td>\n",
+       "      <td>Denial of Service</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.00124</td>\n",
+       "      <td>3000306</td>\n",
+       "      <td>Denial of Service</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.00054</td>\n",
+       "      <td>2863397</td>\n",
+       "      <td>Missing Authorization Check</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.00065</td>\n",
+       "      <td>2826528</td>\n",
+       "      <td>Information Disclosure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.00054</td>\n",
+       "      <td>2984034</td>\n",
+       "      <td>Header Manipulation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>0.00043</td>\n",
+       "      <td>3437585</td>\n",
+       "      <td>CWE-213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>0.00045</td>\n",
+       "      <td>3505293</td>\n",
+       "      <td>CWE-862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>0.00043</td>\n",
+       "      <td>2256627</td>\n",
+       "      <td>CWE-862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>0.00045</td>\n",
+       "      <td>3496410</td>\n",
+       "      <td>CWE-862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>0.00045</td>\n",
+       "      <td>3507252</td>\n",
+       "      <td>CWE-863</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>641 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        epss    Note#                        cweId\n",
+       "0    0.00124  3000306            Denial of Service\n",
+       "1    0.00124  3000306            Denial of Service\n",
+       "2    0.00054  2863397  Missing Authorization Check\n",
+       "3    0.00065  2826528       Information Disclosure\n",
+       "4    0.00054  2984034          Header Manipulation\n",
+       "..       ...      ...                          ...\n",
+       "119  0.00043  3437585                      CWE-213\n",
+       "120  0.00045  3505293                      CWE-862\n",
+       "121  0.00043  2256627                      CWE-862\n",
+       "122  0.00045  3496410                      CWE-862\n",
+       "123  0.00045  3507252                      CWE-863\n",
+       "\n",
+       "[641 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sap_cve_df[['epss', 'Note#', 'cweId']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb7b8a9-e879-459d-9622-dfbd423d577d",
+   "id": "166c6b8b-e115-4d51-97e9-0003a76bd957",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
