update sap notes 10-2024

--- a/notebooks/2.0-rn-get_SAP_CVEs.ipynb
+++ b/notebooks/2.0-rn-get_SAP_CVEs.ipynb
@@ -24,17 +24,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sep 28, 2024 8:00:51 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 08, 2024 5:36:03 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Sep 28, 2024 8:00:51 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 08, 2024 5:36:03 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Sep 28, 2024 8:00:51 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 08, 2024 5:36:05 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Sep 28, 2024 8:00:51 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 08, 2024 5:36:05 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Sep 28, 2024 8:00:52 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 08, 2024 5:36:06 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Sep 28, 2024 8:00:52 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 08, 2024 5:36:06 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n"
      ]
     }
@@ -172,12 +172,47 @@
     "sap_202408 = pd.read_html('https://support.sap.com/en/my-support/knowledge-base/security-notes-news/august-2024.html',\n",
     "                 flavor='html5lib')\n",
     "sap_202409 = pd.read_html('https://support.sap.com/en/my-support/knowledge-base/security-notes-news/september-2024.html',\n",
-    "                 flavor='html5lib')"
+    "                 flavor='html5lib')\n",
+    "sap_202410 = pd.read_html('https://support.sap.com/en/my-support/knowledge-base/security-notes-news/october-2024.html',\n",
+    "                         flavor='html5lib')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "686a5c3d-9f02-4e66-8871-2aad4791445b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[      Note#                                              Title  Priority  CVSS\n",
+       " 0   3479478  Update to Security Note released on August 202...  Critical   9.8\n",
+       " 1   3523541  [CVE-2022-23302] Multiple vulnerabilities in S...      High   8.0\n",
+       " 2   3478615  [CVE-2024-37179] Insecure File Operations vuln...      High   7.7\n",
+       " 3   3483344  Update to Security Note released on July 2024 ...      High   7.7\n",
+       " 4   3477359  Update to Security Note released on September ...    Medium   6.0\n",
+       " 5   3507545  [CVE-2024-45278] Cross-Site Scripting (XSS) vu...    Medium   5.4\n",
+       " 6   3503462  [CVE-2024-47594] Cross-Site Scripting (XSS) vu...    Medium   5.4\n",
+       " 7   3520100  [CVE-2024-45277] Prototype Pollution vulnerabi...    Medium   4.3\n",
+       " 8   3251893  [CVE-2024-45282] HTTP Verb Tampering in SAP S/...    Medium   4.3\n",
+       " 9   3481588  Update to Security Note released on September ...    Medium   4.3\n",
+       " 10  3479293  Update to Security Note released on August 202...    Medium   4.3\n",
+       " 11  3454858  Update to Security Note released on July 2024 ...    Medium   4.1]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sap_202410"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "a5607005-dea9-4370-ba0c-11662ea49320",
    "metadata": {},
    "outputs": [],
@@ -196,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "346559e7-65e2-42c2-b4ba-e339db8f3871",
    "metadata": {},
    "outputs": [],
@@ -209,23 +244,24 @@
     "sap_202406_df = etData1(sap_202406)\n",
     "sap_202407_df = etData2(sap_202407)\n",
     "sap_202408_df = etData2(sap_202408)\n",
-    "sap_202409_df = etData2(sap_202409)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a63f9e26-1130-4f32-86d4-1768daf65467",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sap_2024_ls = [sap_202401_df,sap_202402_df,sap_202403_df,sap_202404_df,sap_202405_df,sap_202406_df,sap_202407_df,sap_202408_df,sap_202409_df]\n",
-    "sap_2024_df = pd.concat(sap_2024_ls)"
+    "sap_202409_df = etData2(sap_202409)\n",
+    "sap_202410_df = etData2(sap_202410)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "a63f9e26-1130-4f32-86d4-1768daf65467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_2024_ls = [sap_202401_df,sap_202402_df,sap_202403_df,sap_202404_df,sap_202405_df,sap_202406_df,sap_202407_df,sap_202408_df,sap_202409_df,sap_202410_df]\n",
+    "sap_2024_df = pd.concat(sap_2024_ls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "5e211b90-c0d8-4189-b33c-2038e8c2907d",
    "metadata": {},
    "outputs": [],
@@ -243,7 +279,7 @@
    "source": [
     "# start extract cve_ids string for terminal commands\n",
     "# Mejorar y crear un file para flag del commando.\n",
-    "l_sap_cve = sap_2022_notes.cve_id.to_list()"
+    "l_sap_cve = sap_2024_notes.cve_id.to_list()"
    ]
   },
   {
@@ -274,7 +310,7 @@
    "outputs": [],
    "source": [
     "string_list = [str(element) for element in clean_sap_cve]\n",
-    "delimiter = \" \"\n",
+    "delimiter = \",\"\n",
     "result_string_cve = delimiter.join(string_list)"
    ]
   },
@@ -300,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0ee96f7c-64ef-461f-9189-1cb9fcb9e36b",
    "metadata": {},
    "outputs": [],
@@ -353,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d353eb05-3c15-4b34-a9ff-c03870745844",
    "metadata": {},
    "outputs": [],
@@ -364,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "ce8d1d81-4e0e-42c2-807f-179dff563d88",
    "metadata": {},
    "outputs": [],
@@ -375,13 +411,14 @@
     "sp_sap_cve_2022.drop_duplicates(subset=['cve_id'], inplace=True)\n",
     "sp_sap_cve_2023 = dataframeSplotscan('sap_history_data_curate/sp_2023_last.json')\n",
     "sp_sap_cve_2023.drop_duplicates(subset=['cve_id'], inplace=True)\n",
-    "sp_sap_cve_2024 = dataframeSplotscan('sap_history_data_curate/sp_sap_2024.json')\n",
+    "#sp_sap_cve_2024 = dataframeSplotscan('sap_history/sp_sap_2024.json')\n",
+    "sp_sap_cve_2024 = dataframeSplotscan('sap_history_data_curate/sp_2024_new.json')\n",
     "sp_sap_cve_2024.drop_duplicates(subset=['cve_id'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "d0114ae5-17c4-4055-ad41-fae482328b23",
    "metadata": {},
    "outputs": [],
@@ -389,12 +426,13 @@
     "cp_sap_cve_2021 = pd.read_csv('sap_history_data_curate/sap_2021_clean.csv')\n",
     "cp_sap_cve_2022 = pd.read_csv('sap_history_data_curate/sap_2022_clean.csv')\n",
     "cp_sap_cve_2023 = pd.read_csv('sap_history_data_curate/sap_2023_clean.csv')\n",
-    "cp_sap_cve_2024 = pd.read_csv('sap_history_data_curate/cveprio_sap_2024.csv')"
+    "#cp_sap_cve_2024 = pd.read_csv('sap_history_data_curate/cveprio_sap_2024.csv')\n",
+    "cp_sap_cve_2024 = pd.read_csv('sap_history_data_curate/sap_202410.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "dc9537c3-ecf3-43de-a34c-c8e88e42fe28",
    "metadata": {},
    "outputs": [],
@@ -407,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "8148fa20-4dbf-4b1b-ba72-e032b972674e",
    "metadata": {},
    "outputs": [],
@@ -419,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "016a79b9-c77c-43b9-ba57-36af5e204565",
    "metadata": {},
    "outputs": [],
@@ -431,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "d1fd930e-509c-4132-9280-5fc30e3902e0",
    "metadata": {},
    "outputs": [],
@@ -443,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "e50353fe-a629-4d45-a300-4fa0d4001010",
    "metadata": {},
    "outputs": [],
@@ -455,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "c9aadaf3-dec1-4c4d-bef8-c056c4bedb9f",
    "metadata": {},
    "outputs": [],
@@ -465,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "baf5411a-8a6e-4c86-b982-b8e8ff9f0fe9",
    "metadata": {},
    "outputs": [],
@@ -475,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "61cdcaf1-5ba1-41cc-bce6-490678c26ae9",
    "metadata": {},
    "outputs": [],
@@ -485,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "7169146c-6b85-46d0-ab1c-cd0d54c9d6bb",
    "metadata": {},
    "outputs": [],
@@ -495,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "959dbcca-2cbb-4f2b-8ed6-756c435de926",
    "metadata": {},
    "outputs": [],
@@ -505,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "a18bb720-5978-4c63-9744-21a416ee2312",
    "metadata": {},
    "outputs": [],
@@ -515,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "958503ea-f6bd-4e03-8dbc-28572471e117",
    "metadata": {},
    "outputs": [],
@@ -525,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "3b47c719-ebd6-4d47-85f8-c12f60cde8c6",
    "metadata": {},
    "outputs": [],
@@ -536,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "cae61325-4c92-4a36-9ef0-2a8a5d277f39",
    "metadata": {},
    "outputs": [],
@@ -546,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "7de39e0a-283c-422e-906e-4cb980998158",
    "metadata": {},
    "outputs": [],
@@ -556,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "53e14a71-aa2e-4b88-a964-e735af3d7d9e",
    "metadata": {},
    "outputs": [],
@@ -566,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "13572a35-dc45-4aa9-810f-9f2196db394e",
    "metadata": {},
    "outputs": [],
@@ -576,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "fefd5409-573f-4a23-a775-7f7c0fbf09f4",
    "metadata": {},
    "outputs": [],
@@ -586,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "d583b335-e77c-4b17-8f23-1a2fbf6652ac",
    "metadata": {},
    "outputs": [],
@@ -596,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "78c76c9c-b862-4bad-b808-d3ee0600b5cf",
    "metadata": {},
    "outputs": [],
@@ -606,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "3c0560a7-c48e-49a7-829d-e2270a983f1a",
    "metadata": {},
    "outputs": [],
@@ -616,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "0b3caee3-5cf7-4e95-8fd1-a124d744f2af",
    "metadata": {},
    "outputs": [],
@@ -626,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "c8b0dd68-6e43-44af-bb8e-e6dfbb28d205",
    "metadata": {},
    "outputs": [],
@@ -636,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "d9a3c549-375f-48b8-b54f-c84195c74fc5",
    "metadata": {},
    "outputs": [],
@@ -646,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "7d7d703a-989a-4ff8-afa2-a805c77202d4",
    "metadata": {},
    "outputs": [],
@@ -656,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "7b1d6392-f965-4e21-b722-b8f83abd0ec8",
    "metadata": {},
    "outputs": [],
@@ -667,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "c2c777e4-7e94-4a4d-94c7-f461c256e467",
    "metadata": {},
    "outputs": [],
@@ -677,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "8b3b85ee-33d2-4a8b-a40c-423e860f04cb",
    "metadata": {},
    "outputs": [],
@@ -687,8 +725,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "094983a1-8ab2-48fe-8860-8692fbc0f0fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['Priority'] == 'Hot News')]['Priority'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdd96326-f78f-4835-9b1e-6f2c46245cd3",
    "metadata": {},
    "outputs": [],
    "source": []
