update date october

--- a/notebooks/2.0-rn-get_SAP_CVEs.ipynb
+++ b/notebooks/2.0-rn-get_SAP_CVEs.ipynb
@@ -24,17 +24,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Oct 08, 2024 5:36:03 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 13, 2024 5:31:00 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Oct 08, 2024 5:36:03 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 13, 2024 5:31:00 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Oct 08, 2024 5:36:05 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 13, 2024 5:31:01 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Oct 08, 2024 5:36:05 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 13, 2024 5:31:01 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Oct 08, 2024 5:36:06 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 13, 2024 5:31:01 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Oct 08, 2024 5:36:06 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 13, 2024 5:31:01 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n"
      ]
     }
@@ -191,14 +191,15 @@
        " 1   3523541  [CVE-2022-23302] Multiple vulnerabilities in S...      High   8.0\n",
        " 2   3478615  [CVE-2024-37179] Insecure File Operations vuln...      High   7.7\n",
        " 3   3483344  Update to Security Note released on July 2024 ...      High   7.7\n",
-       " 4   3477359  Update to Security Note released on September ...    Medium   6.0\n",
-       " 5   3507545  [CVE-2024-45278] Cross-Site Scripting (XSS) vu...    Medium   5.4\n",
-       " 6   3503462  [CVE-2024-47594] Cross-Site Scripting (XSS) vu...    Medium   5.4\n",
-       " 7   3520100  [CVE-2024-45277] Prototype Pollution vulnerabi...    Medium   4.3\n",
-       " 8   3251893  [CVE-2024-45282] HTTP Verb Tampering in SAP S/...    Medium   4.3\n",
-       " 9   3481588  Update to Security Note released on September ...    Medium   4.3\n",
-       " 10  3479293  Update to Security Note released on August 202...    Medium   4.3\n",
-       " 11  3454858  Update to Security Note released on July 2024 ...    Medium   4.1]"
+       " 4   3495876  Update to Security Note released on August 202...    Medium   6.5\n",
+       " 5   3477359  Update to Security Note released on September ...    Medium   6.0\n",
+       " 6   3507545  [CVE-2024-45278] Cross-Site Scripting (XSS) vu...    Medium   5.4\n",
+       " 7   3503462  [CVE-2024-47594] Cross-Site Scripting (XSS) vu...    Medium   5.4\n",
+       " 8   3520100  [CVE-2024-45277] Prototype Pollution vulnerabi...    Medium   4.3\n",
+       " 9   3251893  [CVE-2024-45282] HTTP Verb Tampering in SAP S/...    Medium   4.3\n",
+       " 10  3481588  Update to Security Note released on September ...    Medium   4.3\n",
+       " 11  3479293  Update to Security Note released on August 202...    Medium   4.3\n",
+       " 12  3454858  Update to Security Note released on July 2024 ...    Medium   4.1]"
       ]
      },
      "execution_count": 11,
@@ -594,6 +595,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6adc6732-04ab-4fb5-951a-f0c35aa9f116",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21484'),'cweId'] = \"CWE-863\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "id": "53e14a71-aa2e-4b88-a964-e735af3d7d9e",
    "metadata": {},
@@ -665,6 +676,17 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "b0dea6f3-2501-456b-a070-1ec9855f8be5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-44235'),'cweId'] = \"CWE-78\"\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-37531'),'cweId'] = \"CWE-78\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "c8b0dd68-6e43-44af-bb8e-e6dfbb28d205",
    "metadata": {},
    "outputs": [],
@@ -674,7 +696,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "id": "65b16fb1-f5fd-4181-9a87-001ce911b6da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2024-33007'),'cweId'] = \"CWE-79\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "d9a3c549-375f-48b8-b54f-c84195c74fc5",
    "metadata": {},
    "outputs": [],
@@ -684,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "7d7d703a-989a-4ff8-afa2-a805c77202d4",
    "metadata": {},
    "outputs": [],
@@ -694,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "7b1d6392-f965-4e21-b722-b8f83abd0ec8",
    "metadata": {},
    "outputs": [],
@@ -705,7 +737,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
+   "id": "61aafa9a-362f-4dc8-87a3-79a3bfcf489a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-40499'),'cweId'] = \"CWE-94\"\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-27611'),'cweId'] = \"CWE-94\"\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21466'),'cweId'] = \"CWE-94\"\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-27602'),'cweId'] = \"CWE-94\"\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-44231'),'cweId'] = \"CWE-94\"\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21480'),'cweId'] = \"CWE-94\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "c24142c9-6ec8-4b43-9d7b-f0b17467489e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2020-10683'),'cweId'] = \"CWE-611\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19affe5c-337a-4a7d-9961-816a7a3d6a9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21444'),'cweId'] = \"CWE-1021\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87dca2c1-fd9c-47a5-935e-64e76bade1ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2019-17495'),'cweId'] = \"CWE-352\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c00a6b18-800d-4a48-8773-bf4441239fc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-44151'),'cweId'] = \"CWE-330\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "c2c777e4-7e94-4a4d-94c7-f461c256e467",
    "metadata": {},
    "outputs": [],
@@ -715,17 +802,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "8b3b85ee-33d2-4a8b-a40c-423e860f04cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sap_cve_df.to_csv('sap_cve_last_02.csv', index=False)"
+    "sap_cve_df.to_csv('sap_cve_last_03.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "094983a1-8ab2-48fe-8860-8692fbc0f0fa",
    "metadata": {},
    "outputs": [
@@ -735,7 +822,7 @@
        "90"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
